# saltine

./: .gitignore  CMakeLists.txt  README.md  download_dictionary.sh  main.cpp
include/: command_handler.hpp  saltine.hpp  zipfile.hpp
src/: CMakeLists.txt  saltine.cpp  zipfile.cpp
